CH-49 - Reduced negative margins on video-container to prevent video element from overflowing on mobile devices

--- a/less/apps/video.less
+++ b/less/apps/video.less
@@ -9,7 +9,7 @@
 
 @media screen and (max-width: @screen-md1) {
     .video-container {
-        margin: -20px -20px 20px;
+        margin: -15px -15px 20px;
     }
 }
 
@@ -18,6 +18,7 @@ video {
     margin: 0 auto;
     max-height: 100%;
     max-width: 100%;
+    width: 100%;
 }
 
 @media screen and (max-height: 839px) {
